02-deploy/argocd/argocd-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - argocd.<<VAR_NGINX_DOMAIN>>
  rules:
    - host: argocd.<<VAR_NGINX_DOMAIN>>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
